--- a/hw2/mytable.css
+++ b/hw2/mytable.css
@@ -127,3 +127,8 @@ background-size: 100%;
     background-repeat: no-repeat;
     background-size: 100%;
 }
+table1,tr ,td{
+         border:1px solid black;
+   
+   }
+   
